<resources>
    <string name="app_name">VoyageApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="placeholder_title">Placeholder title</string>
    <string name="placeholder_date">Placeholder Date</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="price_eur">Price (EUR)</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="rating">Rating</string>
    <string name="save_trip">Save Trip</string>
    <string name="add_trip_title">Add a new Trip</string>
    <string name="something_wrong_happened">Something wrong happened!</string>
    <string name="input_required">This input is required</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have an account? Sign up!</string>
    <string name="sign_in_register">Already have an account? Sign in!</string>
    <string name="create_account">Create account</string>
    <string name="text_share">Hey, this is my first Android Application and it\'s awesome!</string>
    <string name="name">Name</string>
    <string name="password_verification">Password verification</string>
    <string name="wrong_email_or_pass">Wrong email or password! Try again!</string>
    <string name="invalid_email">Please enter a valid email address!</string>
    <string name="error_password_verification">The password fields must be the same.</string>
    <string name="error_unfilled">Please fill all the fields!</string>
    <string name="email_taken">That email address is already taken!</string>
    <string name="error_form_generic">Make sure that you\'ve completed the form without errors!</string>
    <string name="logout">Logout</string>
    <string name="edit_trip">Edit a Trip</string>
    <string name="favorites_added">Added to favorites!</string>
    <string name="favorites_removed">Removed from favorites!</string>
    <string name="contact_me">Contact me!</string>
    <string name="trip_long_click_title">What do you want to do?</string>
    <string name="trip_long_click_edit">Edit Trip</string>
    <string name="trip_long_click_delete">Delete Trip</string>
    <string name="trip_long_click_cancel">Cancel</string>
    <string name="delete_this_trip">Delete this trip</string>
    <string name="trip_delete_description">The trip will be permanently deleted</string>
    <string name="trip_delete_title">Are you sure you want to delete this trip?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_delete">Yes, delete!</string>
    <string name="app_logo">App Logo</string>
    <string name="add_trip_button">Add Trip Button</string>
    <string name="email_icon">Email Icon</string>
    <string name="linkedin_logo">LinkedIn Logo</string>
    <string name="github_logo">Github Logo</string>
    <string name="travel_background">Travel Background</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="contact_email">mailto:betiix26@gmail.com</string>
    <string name="contact_linkedin">https://www.linkedin.com/in/elizabetha-buc%C4%83</string>
    <string name="contact_github">https://github.com/betiix26/AndroidFundamentals-VoyageApp</string>
    <string name="the_weather_right_now">The weather right now!</string>
    <string name="degree_symbol">°</string>
    <string name="wind_unit">m/s</string>
    <string name="cloud_unit">%</string>
    <string name="humidity_unit">%</string>
    <string name="loading_weather">Loading Weather...</string>
    <string name="weather_error">We couldn\'t get the weather for this location. Please try again later!</string>
    <string name="no_permission">We cannot fetch the weather without permission to access the Internet.</string>
    <string name="username">Username:</string>
    <string name="let_s_create_your_new_account">Let\'s create your new account!</string>
    <string name="what_does_this_application_mean">What does this application mean?</string>
    <string name="description">This application is useful for the simple fact that you can write down all the trips you have been on. \n \n Thus, you can add the price of each trip, the period in which you were gone and how satisfied you were with this getaway. \n \n You can also add to your favorites the trips that you consider the most beautiful and in which you have unforgettable memories.</string>
    <string name="project">I created this application for the final project belonging to the Google Digital Course, Android Fundamentals section.</string>
    <string name="questions">For any question or collaboration, you can find me at any time by email or linkedin. \n\nAlso, to see the source of the code, you can find me on Github.</string>
    <string name="welcome_to_my_travel_app_voyage">Welcome to my TravelApp - Voyage!</string>
</resources>