<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pinksunset"
    android:padding="@dimen/medium_padding">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_height"
        android:layout_above="@id/linear_layout_about"
        android:layout_centerVertical="true"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/airplane" />

    <LinearLayout
        android:id="@+id/linear_layout_about"
        android:layout_width="wrap_content"
        android:layout_height="412dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/medium_padding"
        android:backgroundTint="@color/blue_pale"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/what_does_this_application_mean"
            android:textSize="@dimen/welcome_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/hr_size"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/hr_size"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/project"
            android:textColor="@color/white" />


    </LinearLayout>
</RelativeLayout>