<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunset"
    android:padding="@dimen/medium_padding"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_height"
        android:layout_above="@id/linear_layout_login"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/airplane" />

    <LinearLayout
        android:id="@+id/linear_layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/medium_padding"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/let_s_create_your_new_account"
            android:textColor="@color/white"
            android:textSize="@dimen/welcome_text_size"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/contact_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_field_name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#30ffffff"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_field_email_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#30ffffff"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/password"
            android:textColor="@color/black"
            app:passwordToggleDrawable="@drawable/icon_selector"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/pass_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_field_password_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#30ffffff"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_password_verification"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/password_verification"
            android:textColor="@color/black"
            app:passwordToggleDrawable="@drawable/icon_selector"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/pass_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_field_password_verification_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#30ffffff"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:backgroundTint="@color/black"
            android:onClick="createAccount"
            android:text="@string/create_account"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_login"
        android:layout_marginTop="@dimen/small_margin"
        android:backgroundTint="@color/pink_pale"
        android:onClick="openLoginActivity"
        android:text="@string/sign_in_register" />
</RelativeLayout>