<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/trip_picture"
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:contentDescription="@string/travel_background"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/munte" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/medium_padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trip_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_title"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/trip_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_below="@id/trip_name"

                    android:text="@string/placeholder_date"
                    android:textColor="?android:attr/textColorSecondary" />

                <ImageButton
                    android:id="@+id/button_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/favorite_icon_height"

                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/favorite_button"
                    android:src="@drawable/ic_baseline_star_outline_24"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/yellow_500"/>
            </RelativeLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>